--- a/multi/Dockerfile
+++ b/multi/Dockerfile
@@ -18,3 +18,10 @@ RUN apt-get update -y && \
     && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+RUN apt-get update -y && \
+    apt-get install -y --no-install-recommends \
+        libmysqlclient-dev \
+    && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
