Provide prerequisites for Postgres and MariaDB by default

--- a/multi/Dockerfile
+++ b/multi/Dockerfile
@@ -2,26 +2,21 @@ FROM themattrix/tox-base
 
 LABEL maintainer="Peter Bittner <peter@painless.software>"
 
-RUN apt-get update -y && \
+RUN apt-get update && \
     apt-get install -y --no-install-recommends \
-        git \
         ca-certificates \
+        git \
+        libmysqlclient-dev \
+        libpq-dev \
     && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN apt-get update -y && \
+RUN apt-get update && \
     apt-get install -y --no-install-recommends \
         php7.0-cli \
         php7.0-mbstring \
         composer \
-    && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-RUN apt-get update -y && \
-    apt-get install -y --no-install-recommends \
-        libmysqlclient-dev \
     && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
